--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -35,6 +37,9 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-auth:20.0.4'//Autentificacion de usuario
+    implementation 'com.google.firebase:firebase-analytics-ktx'//Analytics de firebase
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')//Conexion con firebase
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
