--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Omni_ofertas">
-        <activity android:name=".ui.RegistroActivity"></activity>
+        <activity
+            android:name=".ui.MenuInicio"
+            android:label="@string/title_activity_menu_inicio"
+            android:theme="@style/Theme.Omni_ofertas.NoActionBar"></activity>
+        <activity android:name=".ui.RegistroActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
